<resources>
    <string name="app_name">UnStuck</string>
    <string name="new_category">New Category</string>
    <string name="social_media">Social Media:</string>
    <string name="entertainment">Entertainment:</string>
    <string name="back">Back</string>
    <string name="apps_screen">Apps Screen</string>
    <string name="main_screen">Main Screen</string>
    <string name="apps">Apps</string>
    <string name="onOffButton">onOffButton</string>
    <string name="developer">jacob</string>


    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
</resources>